java8之Optional - 非空对象处理

--- a/1.Java/3.Java8/1.Optional.md
+++ b/1.Java/3.Java8/1.Optional.md
@@ -69,7 +69,9 @@ public static<T> Optional<T> empty() {
 1. `of`方法的入参必须是非空的，若入参为空会直接抛出`NullPointerException`。
 2. `ofNullable`方法允许为空的入参，空值判断写法里基本都用的这个方法。
 
-## 3 核心用法 - 判空及处理（orElse与orElseGet与orElseThrow）
+## 3 核心用法 - 判空及空值对象处理（orElse与orElseGet与orElseThrow）
+
+这三个方法着重于value是null的情况，以及对value是null时不同的处理。来看看源码：
 
 ```java
 // 1. 不为空的话返回当前对象，否则返回指定对象
@@ -92,7 +94,7 @@ public <X extends Throwable> T orElseThrow(Supplier<? extends X> exceptionSuppli
 }
 ```
 
-1. `orElse`方法简单描述就是“为空取默认值”，当目标对象是null时，返回入参的对象。举个例子，某个场景中需要获取配置中的字符集，未配置的话默认使用“UTF-8”：
+1. `orElse`方法简单描述就是“为空取默认值”，当包含对象是null时，返回入参的对象。举个例子，某个场景中需要获取配置中的字符集，未配置的话默认使用“UTF-8”：
 
    ```java
    public void Charset getCharset() {
@@ -100,7 +102,7 @@ public <X extends Throwable> T orElseThrow(Supplier<? extends X> exceptionSuppli
    }
    ```
 
-2. `orElseGet`方法类似于`orElse`，其目的是在目标对象为null时，能够执行一段指定的逻辑，搭配lambda表达式，可以顺滑地使用该方法。还是上面那个例子，未配置字符集的话，我们想从某个方法中获取字符集：
+2. `orElseGet`方法类似于`orElse`，其目的是在包含对象为null时，能够执行一段指定的逻辑，搭配lambda表达式，可以顺滑地使用该方法。还是上面那个例子，未配置字符集的话，我们想从某个方法中获取字符集：
 
    ```java
    public void Charset getCharset() {
@@ -108,13 +110,55 @@ public <X extends Throwable> T orElseThrow(Supplier<? extends X> exceptionSuppli
    }
    ```
 
-3. `orElseThrow`方法的目的是在目标对象为null时，直接抛出自定义异常：
+3. `orElseThrow`方法的目的是在包含对象为null时，直接抛出自定义异常：
 
    ```java
    public void Charset getCharset() {
-       return Optional.ofNullable(config.getCharset()).orElseThrow(() -> new RuntimeException("Charset NOT s"));
+       return Optional.ofNullable(config.getCharset()).orElseThrow(() -> new RuntimeException("Charset NOT specified!"));
    }
    ```
 
-   
+## 4 核心用法 - 判空及非空对象处理（map与flatMap）
+
+这俩方法着重于value非null的情况，对于非空的value执行一些处理。看看源码：
+
+```java
+// 1. mapper处理后结果自动封装为Optional
+public<U> Optional<U> map(Function<? super T, ? extends U> mapper) {
+    Objects.requireNonNull(mapper);
+    if (!isPresent())
+        return empty();
+    else {
+        return Optional.ofNullable(mapper.apply(value));
+    }
+}
+
+// 2. mapper处理后结果需手动封装为Optional
+public<U> Optional<U> flatMap(Function<? super T, Optional<U>> mapper) {
+    Objects.requireNonNull(mapper);
+    if (!isPresent())
+        return empty();
+    else {
+        return Objects.requireNonNull(mapper.apply(value));
+    }
+}
+```
+
+对比俩方法源码就能看出其实这俩方法没多大区别，在value为null时，都返回*空值常量*。在value不为null时，将value传给mapper处理一遍，`map`方法会将入参mapper的返回结果自动封装为Optional，而`flatMap`则需要入参mapper在处理完value后，手动封装为Optional再返回。
+
+举个例子，需要将员工的名字做小写处理后返回：
+
+```java
+// 1. 用map实现
+public String getEmployeeNameLowerCase(Employee e) {
+    return Optional.ofNullable(employee).map(e -> e.getName().toLowerCase()).get();
+}
+
+// 2. 用flatMapu
+public String getEmployeeNameLowerCase(Employee e) {
+    return Optional.ofNullable(employee).flatMap(e -> Optional.of(e.getName().toLowerCase())).get();
+}
+```
+
+
 
