--- a/1.Java/3.Java8/1.Optional.md
+++ b/1.Java/3.Java8/1.Optional.md
@@ -146,7 +146,7 @@ public<U> Optional<U> flatMap(Function<? super T, Optional<U>> mapper) {
 
 对比俩方法源码就能看出其实这俩方法没多大区别，在value为null时，都返回*空值常量*。在value不为null时，将value传给mapper处理一遍，`map`方法会将入参mapper的返回结果自动封装为Optional，而`flatMap`则需要入参mapper在处理完value后，手动封装为Optional再返回。
 
-举个例子，需要将员工的名字做小写处理后返回：
+举个例子，某个场景需要获取员工的名字，并对名字做小写处理：
 
 ```java
 // 1. 用map实现
@@ -154,9 +154,55 @@ public String getEmployeeNameLowerCase(Employee e) {
     return Optional.ofNullable(employee).map(e -> e.getName().toLowerCase()).get();
 }
 
-// 2. 用flatMapu
+// 2. 用flatMap实现
 public String getEmployeeNameLowerCase(Employee e) {
     return Optional.ofNullable(employee).flatMap(e -> Optional.of(e.getName().toLowerCase())).get();
+}
+```
+
+再多一句，`map`与`flatMap`俩方法返回的Optional，其包含对象类型不一定要与原包含对象类型一致。
+
+## 5 核心用法 - 判空及非空对象处理2（isPresent与ifPresent）
+
+这俩方法的逻辑简单多了：
+
+```java
+// 1. 校验包含对象是否为空
+public boolean isPresent() {
+    return value != null;
+}
+
+// 2. 校验包含对象是否为空，若不为空，则对之做处理；否则不做任何操作
+public void ifPresent(Consumer<? super T> consumer) {
+    if (value != null)
+        consumer.accept(value);
+}
+```
+
+1. `isPresent`就是简单地判断value是否为null，返回boolean。
+2. `ifPresent`在value不为null时，对value做处理，无返参。
+
+## 6 核心用法 - 过滤（filter）
+
+直接看源码：
+
+```java
+public Optional<T> filter(Predicate<? super T> predicate) {
+    Objects.requireNonNull(predicate);
+    if (!isPresent())
+        return this;
+    else
+        return predicate.test(value) ? this : empty();
+}
+```
+
+该方法在value不为null时，对value做一个指定的校验，如果满足条件，则返回当前Optional，否则返回*空值常量*。当然如果value为null时，直接返回。
+
+举个例子，某场景要求名字是“S”开头的员工，将其名字改为大写：
+
+```java
+public void handelSpecialNameEmployee(Employee e) {
+    Optional.ofNullable(employee).filter(e -> e.getName().startsWith("S")).ifPresent(e -> e.setName(e.getName().toUpperCase()));
 }
 ```
 
