--- a/3.MySQL/1.mysql-infrastructure.md
+++ b/3.MySQL/1.mysql-infrastructure.md
@@ -16,7 +16,7 @@
 
 ## 1 连接器
 
-对于客户端来说，想要与数据库交互，现要与数据库建立连接。连接器就是负责等待客户端的连接，建立连接，校验用户名密码（认证），校验权限（鉴权），并维护与管理连接。
+对于客户端来说，想要与数据库交互，得先与数据库建立连接。连接器就是负责等待客户端的连接，建立连接，校验用户名密码（认证），校验权限（鉴权），并维护与管理连接。
 
 比如通过终端连接：
 
