mysql索引 - 页结构

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -83,13 +83,65 @@ data/
 |   32KB    |     2MB     |         64         |
 |   64KB    |     4MB     |         64         |
 
-*（参考[glossary-extent](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_extent)及[InnoDB: Tablespace Space Management](https://dev.mysql.com/blog-archive/innodb-tablespace-space-management/)）*
+*（参考[glossary-extent](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_extent)及[InnoDB: Tablespace Space Management](https://dev.mysql.com/blog-archive/innodb-tablespace-space-management/)及[Extent Descriptor Page of InnoDB](https://dev.mysql.com/blog-archive/extent-descriptor-page-of-innodb/)）*
 
-## 2.2 页的结构
+### 2.2 页的结构
 
-## 2.3 页合并与页分裂
+*（参考[InnoDB Page Structure](https://dev.mysql.com/doc/internals/en/innodb-page-structure.html)）*
 
-[InnoDB Page Merging and Page Splitting](https://www.percona.com/blog/2017/04/10/innodb-page-merging-and-page-splitting/)
+页是InnoDB操作数据的基础单位，InnoDB每次在磁盘（数据文件）与内存（缓冲池buffer pool）之间传输数据都是以页为单位的。
+
+一个页包含七个部分：
+
+- **Fil Header** - 页文件头
+- **Page Header** - 页头
+- **Infimum + Supremum Records** - 首尾记录行
+- **User Records** - 用户记录行
+- **Free Space** - 空白空间（未使用）
+- **Page Directory** - 页目录
+- **Fil Trailer** - 页文件尾
+
+#### 2.2.1 Fil Header
+
+页文件头包含八个部分：
+
+| 名称                      | 大小 | 描述                                                         |
+| ------------------------- | ------ | ---------------------------------------------------------- |
+| `FIL_PAGE_SPACE`          | 4    | 当前页所处的空间的ID                     |
+| `FIL_PAGE_OFFSET`         | 4    | 当前空间中该页所排的序号            |
+| `FIL_PAGE_PREV`           | 4    | 指向前一页的指针（偏移量）             |
+| `FIL_PAGE_NEXT`           | 4    | 指向后一个页的指针（偏移量）               |
+| `FIL_PAGE_LSN`            | 8    | [LSN](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_lsn)是日志序列号，用于标记版本，`FIL_PAGE_LSN`当前页的最新（改动）的日志记录序列号 |
+| `FIL_PAGE_TYPE`           | 2    | 当前页的类型，目前有这些: `FIL_PAGE_INDEX`, `FIL_PAGE_UNDO_LOG`, `FIL_PAGE_INODE`, `FIL_PAGE_IBUF_FREE_LIST` |
+| `FIL_PAGE_FILE_FLUSH_LSN` | 8    | 一个[LSN](https://dev.mysql.com/doc/refman/5.7/en/glossary.html#glos_lsn)，标识了当前已经写（flush）到文件中的日志记录序列号（版本）。该值只在数据文件的第一个页中有效。 |
+| `FIL_PAGE_ARCH_LOG_NO`    | 4    | 当前`FIL_PAGE_FILE_FLUSH_LSN` 写进的归档日志的编号。该值也是只在数据文件的第一个页中有效。 |
+
+#### 2.2.2 Page Header
+
+页头这块共有14个部分：
+
+| **名称**            | **大小** | **描述**                                                     |
+| ------------------- | -------- | ------------------------------------------------------------ |
+| `PAGE_N_DIR_SLOTS`  | 2        | Page Directory这块的目录槽的数量，初始值是2                  |
+| `PAGE_HEAP_TOP`     | 2        | 指向堆中第一条记录的指针                                     |
+| `PAGE_N_HEAP`       | 2        | 堆中记录的总条数，初始值是2（Infimum与Supremum）             |
+| `PAGE_FREE`         | 2        | 指向第一个空记录的指针                                       |
+| `PAGE_GARBAGE`      | 2        | 已删除的记录的大小（bytes）                                  |
+| `PAGE_LAST_INSERT`  | 2        | 指向最后一条新增记录的指针                                   |
+| `PAGE_DIRECTION`    | 2        | 方向，有`PAGE_LEFT`、 `PAGE_RIGHT`、 `PAGE_NO_DIRECTION`     |
+| `PAGE_N_DIRECTION`  | 2        | number of consecutive inserts in the same direction, for example, "last 5 were all to the left" |
+| `PAGE_N_RECS`       | 2        | number of user records                                       |
+| `PAGE_MAX_TRX_ID`   | 8        | the highest ID of a transaction which might have changed a record on the page (only set for secondary indexes) |
+| `PAGE_LEVEL`        | 2        | level within the index (0 for a leaf page)                   |
+| `PAGE_INDEX_ID`     | 8        | identifier of the index the page belongs to                  |
+| `PAGE_BTR_SEG_LEAF` | 10       | "file segment header for the leaf pages in a B-tree" (this is irrelevant here) |
+| `PAGE_BTR_SEG_TOP`  | 10       | "file segment header for the non-leaf pages in a B-tree" (this is irrelevant here) |
+
+
+
+### 2.3 页合并与页分裂
+
+*（参考[InnoDB Page Merging and Page Splitting](https://www.percona.com/blog/2017/04/10/innodb-page-merging-and-page-splitting/)）*
 
 上面我们提到页的大小都是固定的，我们拿聚簇索引来讲，如果建表时选用了自增长的主键（auto_increment），那么在每个页上，记录都是顺序添加的。比如insert记录1、2、3、4，那么在第一页，记录1、2、3、4依次按顺序被添加：
 
@@ -102,3 +154,4 @@ data/
 当一页被放满后，新增的记录会被放到下一页中：
 
 ![image-20211101233548697](assets/image-20211101233548697.png)
+
