mysql索引 - 页结构

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -123,19 +123,42 @@ data/
 | **名称**            | **大小** | **描述**                                                     |
 | ------------------- | -------- | ------------------------------------------------------------ |
 | `PAGE_N_DIR_SLOTS`  | 2        | Page Directory这块的目录槽的数量，初始值是2                  |
-| `PAGE_HEAP_TOP`     | 2        | 指向堆中第一条记录的指针                                     |
+| `PAGE_HEAP_TOP`     | 2        | 指向heap（堆）中第一条记录的指针                             |
 | `PAGE_N_HEAP`       | 2        | 堆中记录的总条数，初始值是2（Infimum与Supremum）             |
-| `PAGE_FREE`         | 2        | 指向第一个空记录的指针                                       |
+| `PAGE_FREE`         | 2        | 指向页中空闲空间的位置                                       |
 | `PAGE_GARBAGE`      | 2        | 已删除的记录的大小（bytes）                                  |
-| `PAGE_LAST_INSERT`  | 2        | 指向最后一条新增记录的指针                                   |
-| `PAGE_DIRECTION`    | 2        | 方向，有`PAGE_LEFT`、 `PAGE_RIGHT`、 `PAGE_NO_DIRECTION`     |
-| `PAGE_N_DIRECTION`  | 2        | number of consecutive inserts in the same direction, for example, "last 5 were all to the left" |
-| `PAGE_N_RECS`       | 2        | number of user records                                       |
-| `PAGE_MAX_TRX_ID`   | 8        | the highest ID of a transaction which might have changed a record on the page (only set for secondary indexes) |
-| `PAGE_LEVEL`        | 2        | level within the index (0 for a leaf page)                   |
-| `PAGE_INDEX_ID`     | 8        | identifier of the index the page belongs to                  |
-| `PAGE_BTR_SEG_LEAF` | 10       | "file segment header for the leaf pages in a B-tree" (this is irrelevant here) |
-| `PAGE_BTR_SEG_TOP`  | 10       | "file segment header for the non-leaf pages in a B-tree" (this is irrelevant here) |
+| `PAGE_LAST_INSERT`  | 2        | 指向最后一条新增记录的指针（最后插入记录的位置）             |
+| `PAGE_DIRECTION`    | 2        | 记录的操作方向，有`PAGE_LEFT`、 `PAGE_RIGHT`、 `PAGE_NO_DIRECTION` |
+| `PAGE_N_DIRECTION`  | 2        | 同一方向连续插入的记录数，比如“最近5条记录都是向左新增”      |
+| `PAGE_N_RECS`       | 2        | 用户记录数量（不算Infimum与Supremum）                        |
+| `PAGE_MAX_TRX_ID`   | 8        | 修改当前的最大事务ID （该值只对辅助索引有效）                |
+| `PAGE_LEVEL`        | 2        | 当前页在索引树中的位置层 （叶子节点是0层）                   |
+| `PAGE_INDEX_ID`     | 8        | 当前页所属索引的标识id                                       |
+| `PAGE_BTR_SEG_LEAF` | 10       | B+树叶子节点所在Segment的header信息                          |
+| `PAGE_BTR_SEG_TOP`  | 10       | B+树非叶子节点所在Segment的header信息                        |
+
+#### 2.2.3 Infimum与Supremum记录
+
+这俩是页中自带的虚拟记录，标识了页中记录的边界。Infimum记录比该页中任何一个key都小，Supremum比该页中任何一个key都大。
+
+![image-20211104194740422](assets/image-20211104194740422.png)
+
+#### 2.2.4 User Records
+
+这里就是用户插入的记录。
+
+整个页中的所有记录是一条单向链表，每条记录都维护了一个指向下一个记录的指针。根据定义，B+树访问记录的顺序必须按照键值的顺序，所以为了减少插入新行的开销，不能做数据的移动（不能整理因中间某行被删除造成的空间碎片），所以新插入行时，会往这两个位置插入：
+
+1. 现有行末尾的空闲空间
+2. 已删除行留下的空闲空间
+
+所以在逻辑顺序上，记录之间按照key的顺序排列，但是在物理顺序上，记录之间可能是乱序的：
+
+![image-20211104203210648](assets/image-20211104203210648.png)
+
+#### 2.2.5 Free Space
+
+空闲空间分为两个部分，一个是从未使用过的，崭新的空闲空间，另一个是删除行记录后留下的空闲空间。
 
 
 
