--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -147,7 +147,7 @@ data/
 
 这里就是用户插入的记录。
 
-整个页中的所有记录是一条单向链表，每条记录都维护了一个指向下一个记录的指针。根据定义，B+树访问记录的顺序必须按照键值的顺序，所以为了减少插入新行的开销，不能做数据的移动（不能整理因中间某行被删除造成的空间碎片），所以新插入行时，会往这两个位置插入：
+整个页中的所有记录是一条单向链表，每条记录都维护了一个指向下一个记录的指针。根据定义，B+树访问记录的顺序必须按照键值的顺序，所以为了减少插入新行的开销，不能做数据的移动（不能整理因中间某行被删除造成的空间碎片)，所以新插入行时，会往这两个位置插入：
 
 1. 现有行末尾的空闲空间
 2. 已删除行留下的空闲空间
@@ -159,6 +159,8 @@ data/
 #### 2.2.5 Free Space
 
 空闲空间分为两个部分，一个是从未使用过的，崭新的空闲空间，另一个是删除行记录后留下的空闲空间。
+
+#### 2.2.6 Page Directory
 
 
 
