mysql索引 - 页结构

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -162,7 +162,19 @@ data/
 
 #### 2.2.6 Page Directory
 
+页目录是一系列指向当前页中记录的指针。有的地方将这些记录指针称之为“槽（slots）”。需要注意的是，这些槽并不是与记录一一对应的，在一个“被装满”的页中，一个槽对应六条记录。
 
+这些槽以“逻辑顺序”追踪页中记录（区别于上述提及的物理顺序），当搜索的时候，可以根据槽确定目标记录的大致位置，然后再根据记录间的`next`指针（上述提及的记录间的单向链表）依次找到精确记录。
+
+#### 2.2.7 Fil Trailer
+
+页文件尾的结构很简单，它只有一个部分：
+
+| 名称               | 大小 | 描述                                                         |
+| ------------------ | ---- | ------------------------------------------------------------ |
+| `FIL_PAGE_END_LSN` | 8    | 低位4字节是当前页面的*checksum*，剩下4位与页文件头中的`FIL_PAGE_LSN`相同 |
+
+页文件尾的存在表达了InnoDB设计者对文件完整性的担忧吧。虽然日志恢复机制总能保证页的保存能够维持一个一致性的状态（即使是崩溃中断）。但是万事就怕万一，在文件尾加上个checksum，并记录一个能与页头呼应（相同）的值，总归是不错的。
 
 ### 2.3 页合并与页分裂
 
@@ -179,4 +191,6 @@ data/
 当一页被放满后，新增的记录会被放到下一页中：
 
 ![image-20211101233548697](assets/image-20211101233548697.png)
+
+#### 
 
