mysql索引 - 页合并

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -192,5 +192,21 @@ data/
 
 ![image-20211101233548697](assets/image-20211101233548697.png)
 
-#### 
+#### 2.3.1 页合并
+
+每一个页都有一个非常重要的属性：***MERGE_THRESHOLD***，其表示了操作页合并的（页已使用比例）阈值，默认值是页大小的50%。
+
+![image-20211108215113451](assets/image-20211108215113451.png)
+
+还有需要了解的是，当你删除一条记录，它并不会被物理删除，其只是打上了一个“被删除”的标签，其所占空间成为可回收的free space。
+
+当对记录的删除或是更新，使得当前页的使用空间百分比低于50%时，InnoDB会尝试查看相邻页（前一页与后一页）是否满足合并的条件。
+
+![image-20211108220248744](assets/image-20211108220248744.png)
+
+![image-20211108220515855](assets/image-20211108220515855.png)
+
+在上图的例子中，Page #1删除了5、6、7、8记录，其剩余记录的空间占比触及（低于）阈值8k，而且此时Page #2中，记录已占用空间未达50%，InnoDB就会认为这俩页目前可以合并。Page #2中的记录会被移至Page #1，Page #2成为一个空页，等待新纪录的到来。
+
+![image-20211108220947649](assets/image-20211108220947649.png)
 
