mysql索引 - 页分裂

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -210,3 +210,27 @@ data/
 
 ![image-20211108220947649](assets/image-20211108220947649.png)
 
+*（[`MERGE_THRESHOLD`可为表或单独为索引设置](https://blog.csdn.net/wanbin6470398/article/details/82184383)）*
+
+#### 2.3.2 页分裂
+
+还记得上面的例子吗，往Page #1中新增记录，但是放不下了，这条新纪录会被放置到Page #2中。但是还存在一种情况，这条新增不是按照key顺序的，此时Page #2也是满的怎么办？
+
+![image-20211108222951780](assets/image-20211108222951780.png)
+
+这时就会触发页分裂，InnoDB的操作步骤可以简化描述为：
+
+1. 创建新的一页
+2. 决定Page #1从哪条记录开始分割
+3. 转移记录
+4. 重定义页之间的关系
+
+那么，先新建Page #3，并将Page #1中的数据部分转移到新页中：
+
+![image-20211108223645901](assets/image-20211108223645901.png)
+
+并重新关联这仨页之间的关系：
+
+![image-20211108224742536](assets/image-20211108224742536.png)
+
+与页中记录类似，页与页之间也是逻辑顺序有序，但物理顺序无序的。（但页之间是双向链表）
