--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -234,3 +234,9 @@ data/
 ![image-20211108224742536](assets/image-20211108224742536.png)
 
 与页中记录类似，页与页之间也是逻辑顺序有序，但物理顺序无序的。（但页之间是双向链表）
+
+## 3 索引覆盖
+
+## 4 最左前缀原则
+
+## 5 索引下推
