--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -237,6 +237,25 @@ data/
 
 ## 3 索引覆盖
 
+**索引中若能包含需要查询的字段，那就直接返回结果，不需要回表。**
+
+这还是比较好理解的，如果辅助索引的字段，就包含了需要查询的字段（比如SELECT组合索引中的某个字段，或是SELECT id），那就没必要命中辅助索引之后再去主键索引查一遍。
+
+举个例子，现有一张user表：
+
+```sql
+CREATE TABLE user (id INT PRIMARY KEY, age INT, name VARCHAR(128), 
+                   KEY`name_age` (`name`,`age`)) ENGINE = InnoDB;
+```
+
+那么这条查询sql就不需要回表：
+
+```sql
+SELECT age FROM user WHERE name = 'Alice';
+```
+
 ## 4 最左前缀原则
+
+
 
 ## 5 索引下推
