mysql最左前缀原则

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -256,6 +256,33 @@ SELECT age FROM user WHERE name = 'Alice';
 
 ## 4 最左前缀原则
 
+在检索联合索引时，优先从索引的最左边开始匹配。
 
+这如何理解呢？我们需要先去了解联合索引的存在方式，其排序结构，我们仍用这个user表举例：
+
+```sql
+CREATE TABLE user (id INT PRIMARY KEY, age INT, name VARCHAR(128), 
+                   KEY`name_age` (`name`,`age`)) ENGINE = InnoDB;
+```
+
+该表以name和age为联合索引，现构造几条数据：
+
+```sql
+INSERT INTO user (name, age) VALUES 
+('李雷', 17),
+('韩梅梅', 16),
+('张三', 23),
+('张三', 22),
+('张三', 25),
+```
+
+那么在`name_age`的索引树中，其节点是依此顺序的：
+
+![image-20211115193347862](assets/image-20211115193347862.png)
+
+该联合索引的节点先以name排序，name相同时再以age排序。不难理解：
+
+1. `...WHERE name = 'xx';`可以使用该辅助索引检索。
+2. `...WHERE age = 22;` 无法使用该辅助索引。
 
 ## 5 索引下推
