--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -287,5 +287,29 @@ INSERT INTO user (name, age) VALUES
 
 ## 5 索引下推
 
-先理解“下推”的概念，这个“下推”是指原应由server层过滤的行为，下推至由存储引擎层做。索引下推（[Index Condition Pushdown](https://dev.mysql.com/doc/refman/5.6/en/index-condition-pushdown-optimization.html)）是MySQL针对使用索引检索的一个优化，如果没有索引下推，MySQL需要先根据辅助索引定位到聚簇索引中的行，再将行数据返回给server层，由server层来判断这些行是否满足条件。如果开启了索引下推，MySQL会将那些能够在辅助索引中排除掉的行，**由存储引擎层先排除掉**，这样减少了聚簇索引的访问次数，且减少了server层调用存储引擎层的次数。
+先理解“下推”的概念，这个“下推”是指原应由server层过滤的行为，下推至由存储引擎层做。索引下推（[Index Condition Pushdown](https://dev.mysql.com/doc/refman/5.6/en/index-condition-pushdown-optimization.html)）是MySQL针对使用索引检索的一个优化，如果没有索引下推，MySQL需要先根据辅助索引定位到聚簇索引中的行，再将行数据返回给server层，由server层来判断这些行是否满足条件。如果开启了索引下推，MySQL会将那些能够在辅助索引中确定不匹配的行，**由存储引擎层先排除掉**，这样减少了聚簇索引的访问次数，且减少了server层调用存储引擎层的次数。
+
+举例子吧，假设有一张客户信息表：
+
+```sql
+CREATE TABLE client (
+    id INT PRIMARY KEY,  
+    name VARCHAR(128),
+    zipcode VARCHAR(8),
+    address VARCHAR(256)
+    KEY `idx` (`zipcode`,`name`,`address`)
+) ENGINE = InnoDB;
+```
+
+造几条数据：
+
+```sql
+INSERT INTO client (name, zipcode, address)
+VALUES
+('张三', '210000', '南京市玄武区徐庄软件园'),
+('李四', '200000', '上海市黄浦区人民广场'),
+('王五', '210000', '南京市雨花台区软件大道'),
+('张四', '210000', '南京市玄武区徐庄大马路'),
+('张六', '210000', '南京市秦淮区夫子庙')
+```
 
