索引下推加例图

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -313,3 +313,19 @@ VALUES
 ('张六', '210000', '南京市秦淮区夫子庙')
 ```
 
+执行如下查询：
+
+```sql
+SELECT * FROM client
+  WHERE zipcode = '210000'
+  AND name LIKE '%张%'
+  AND address LIKE '%徐庄%';
+```
+
+如果没有使用索引下推（MySQL 5.6 之前）的话，这条查询sql是这样被执行的：
+
+1. 检索辅助索引，命中`zipcode = '210000'`的索引记录，得到一组主键ID。
+2. 使用这组主键id回表查对应的整行数据（查主键索引），再根据where条件一一匹配过滤
+
+![image-20211119172222704](assets/image-20211119172222704.png)
+
