mysql索引-索引下推

--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -324,8 +324,16 @@ SELECT * FROM client
 
 如果没有使用索引下推（MySQL 5.6 之前）的话，这条查询sql是这样被执行的：
 
-1. 检索辅助索引，命中`zipcode = '210000'`的索引记录，得到一组主键ID。
-2. 使用这组主键id回表查对应的整行数据（查主键索引），再根据where条件一一匹配过滤
+1. 检索辅助索引，命中`zipcode = '210000'`的索引记录，得到主键ID。
+2. 使用主键id回表查对应的整行数据（查主键索引），再根据where条件一一匹配过滤。
 
 ![image-20211119172222704](assets/image-20211119172222704.png)
+
+如果开启了索引下推，在回表之前先用辅助索引中的能够过滤的字段先过滤一遍：
+
+1. 检索辅助索引，命中`zipcode = '210000'`的索引记录。
+2. 在辅助索引中，看索引字段能否满足where条件，能够满足的话，得到主键ID。
+3. 使用主键id回表查对应的整行数据（查主键索引），再根据where条件一一匹配过滤。
+
+![image-20211119173715813](assets/image-20211119173715813.png)
 
