--- a/3.MySQL/5.mysql-indexes.md
+++ b/3.MySQL/5.mysql-indexes.md
@@ -337,3 +337,10 @@ SELECT * FROM client
 
 ![image-20211119173715813](assets/image-20211119173715813.png)
 
+在MySQL 5.6 之后，索引下推是默认开启的，可以通过这个开关来控制：
+
+```shell
+SET optimizer_switch = 'index_condition_pushdown=off';
+SET optimizer_switch = 'index_condition_pushdown=on';
+```
+
