--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -2,3 +2,22 @@
 
 锁嘛，对付并发用的。MySQL中的锁，根据锁定的范围，可以大致分为**全局锁**、**表级锁**与**行锁**。
 
+## 1 锁定范围
+
+### 1.1 全局锁
+
+很显然的，全局锁就是给整个MySQL实例加锁，有个命令：
+
+```shell
+FLUSH TABLES WRITE READ LOCK
+```
+
+这个FTWRL命令会给整个MySQL加上只读锁，加锁后这些操作会被阻塞：
+
+1. 数据更新语句（数据的增删改）
+2. 数据定义语句（包括建表、修改表结构等）
+3. 更新类事务的提交语句
+
+### 1.2 表级锁
+
+### 1.3 行锁
