--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -18,6 +18,33 @@ FLUSH TABLES WRITE READ LOCK
 2. 数据定义语句（包括建表、修改表结构等）
 3. 更新类事务的提交语句
 
+这个锁是相当重量级的，看起来比较危险，毕竟阻塞了所有写操作。**它一般用于备份工具获取一致性备份。**不过对于InnoDB引擎来说，由于MVCC的支持，在可重复读的隔离级别下，无需阻塞写操作就能得到一致性的备份（`mysqldump`带上`--single-transaction`）。
+
 ### 1.2 表级锁
+
+MySQL的表级锁分为：
+
+- 表锁
+- 元数据锁（MDL，Meta Data Lock）
+
+#### 1.2.1 表锁
+
+表锁就是[`LOCK TABLES t1 READ|WRITE`](https://dev.mysql.com/doc/refman/5.7/en/lock-tables.html)。
+
+对t1加read锁的话：
+
+- 当前session对t1只能read，不能write。
+- 当前session对其他表不能read且不能write。
+- 其他session对t1的DML操作会阻塞。
+- 其他session对其他表的操作无影响。
+- 其他session可以同时对t1加read锁。
+
+对t1加write锁的话：
+
+- 当前session对t1可以read与write。
+- 其他session对t1不能read，且不能write。
+- 其他session同时对t1的加write锁操作会被阻塞，直至当前session释放write锁。
+
+
 
 ### 1.3 行锁
