--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -35,7 +35,7 @@ MySQL的表级锁分为：
 
 - 当前session对t1只能read，不能write。
 - 当前session对其他表不能read且不能write。
-- 其他session对t1的DML操作会阻塞。
+- 其他session对t1的write操作会阻塞。
 - 其他session对其他表的操作无影响。
 - 其他session可以同时对t1加read锁。
 
@@ -45,6 +45,8 @@ MySQL的表级锁分为：
 - 其他session对t1不能read，且不能write。
 - 其他session同时对t1的加write锁操作会被阻塞，直至当前session释放write锁。
 
+对表t1加表锁情况对比：
 
+![image-20211122174122272](assets/image-20211122174122272.png)
 
 ### 1.3 行锁
