--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -49,4 +49,16 @@ MySQL的表级锁分为：
 
 ![image-20211122174122272](assets/image-20211122174122272.png)
 
+`WRITE`锁的优先级要比`READ`锁要高，因为MySQL想要保证更新操作尽可能快地执行完。比如有一个session正在获取`READ`锁，然后另一个session在请求`WRITE`锁，那么后续的`READ`锁请求会阻塞，直至持有`WRITE`锁的session释放锁。
+
+释放锁只需要执行：
+
+```sql
+UNLOCK TABLES;
+```
+
+session断开也会自动释放锁。
+
+#### 1.2.2元数据锁
+
 ### 1.3 行锁
