--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -61,4 +61,6 @@ session断开也会自动释放锁。
 
 #### 1.2.2元数据锁
 
+元数据锁MDL([Metadata Locking](https://dev.mysql.com/doc/refman/5.7/en/metadata-locking.html))不需要显示地使用。
+
 ### 1.3 行锁
