--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -61,6 +61,21 @@ session断开也会自动释放锁。
 
 #### 1.2.2元数据锁
 
-元数据锁MDL([Metadata Locking](https://dev.mysql.com/doc/refman/5.7/en/metadata-locking.html))不需要显示地使用。
+元数据锁MDL([Metadata Locking](https://dev.mysql.com/doc/refman/5.7/en/metadata-locking.html))主要作用是维护表元数据的数据一致性，**用于保证DDL操作与DML操作之间的一致性**。
+
+MDL不需要显示地调用，每次执行DML语句时会申请MDL读锁，每次执行DDL语句时会申请MDL写锁。读锁之间不互斥，比如多个session可以同时对同一张表增删改查。但是读锁与写锁、写锁之间是互斥的。而且存在一个锁申请队列，队列中写锁的优先级是高于读锁的。
+
+![image-20211123160901856](assets/image-20211123160901856.png)
+
+MySQL 5.7新增了一张只读表`performance_schema.metadata_locks`，专门用来记录MDL的相关信息。不过5.7中是默认关闭的，需要这么开启：
+
+```sql
+UPDATE performance_schema.setup_instruments
+SET ENABLED = 'YES', TIMED = 'YES'
+WHERE NAME = 'wait/lock/metadata/sql/mdl';
+```
+
+*参考《[深入理解MDL元数据锁](https://cloud.tencent.com/developer/article/1553461)》与《[MySQL元数据锁(MDL)](http://mytecdb.com/blogDetail.php?id=183)》*
 
 ### 1.3 行锁
+
