--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -1,6 +1,6 @@
 # MySQL锁
 
-锁嘛，对付并发用的。MySQL中的锁，根据锁定的范围，可以大致分为**全局锁**、**表级锁**与**行锁**。
+锁嘛，对付并发用的。MySQL中的锁，根据锁定的范围，可以大致分为**全局锁**、**表级锁**与**行级锁**。
 
 ## 1 锁定范围
 
@@ -77,5 +77,11 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 
 *参考《[深入理解MDL元数据锁](https://cloud.tencent.com/developer/article/1553461)》与《[MySQL元数据锁(MDL)](http://mytecdb.com/blogDetail.php?id=183)》*
 
-### 1.3 行锁
+### 1.3 行级锁
+
+行级锁是InnoDB的机制，其依赖于行锁，可以支持多个事务并发地修改同一张表。但当有两个事务同时修改同一个行数据时，其中一个事务需要等待另一个事务执行完毕。
+
+行锁就是加在行上的锁，是防止其他事务同时修改当前行的锁。行锁的存在大大降低了锁定的粒度，提到了数据库访问的并发读（否则并发控制只能走表锁，比如 MyISAM）。
+
+
 
