--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -83,5 +83,23 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 
 行锁就是加在行上的锁，是防止其他事务同时修改当前行的锁。行锁的存在大大降低了锁定的粒度，提到了数据库访问的并发读（否则并发控制只能走表锁，比如 MyISAM）。
 
+## 2 实现类型
 
+*参考[14.7.1 InnoDB Locking](https://dev.mysql.com/doc/refman/5.7/en/innodb-locking.html)*
+
+### 2.1 共享与排他锁
+
+### 2.2 意向锁
+
+### 2.3 记录锁（行锁）
+
+### 2.4 间隙锁
+
+### 2.5 临键锁
+
+### 2.6 插入意向锁
+
+### 2.7 自增锁
+
+### 2.8 预测锁（空间索引Spatial Indexes）
 
