mysql共享锁与排他锁

--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -87,7 +87,11 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 
 *参考[14.7.1 InnoDB Locking](https://dev.mysql.com/doc/refman/5.7/en/innodb-locking.html)*
 
-### 2.1 共享与排他锁
+### 2.1 共享锁与排他锁
+
+这俩锁是InnoDB对于行级锁的两种实现，其区别在于：
+
+- 
 
 ### 2.2 意向锁
 
