mysql共享锁与排他锁

--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -91,7 +91,15 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 
 这俩锁是InnoDB对于行级锁的两种实现，其区别在于：
 
-- 
+- 共享锁允许持有其的事务对行进行读操作。
+- 排他锁允许持有其的事务对行进行写操作（更新或删除）。
+
+举个例子，如果事务`t1`持有了行`r`的共享锁，那么此时另一个事务`t2`对于行`r`的锁请求操作会被如下处置：
+
+- `t2`对行`r`的共享锁请求会被立刻准予，`t1`与`t2`同时持有行`r`的共享锁。
+- `t2`对行`r`的排他锁请求**不会**被准予（等待）。
+
+同样的，若`t1`持有的是行`r`的排他锁，那么无论是`t2`的共享锁请求，还是排他锁请求，都不会被准予，`t2`的锁请求操作都需要等待`t1`释放行`r`的排他锁。
 
 ### 2.2 意向锁
 
