--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -91,17 +91,56 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 
 这俩锁是InnoDB对于行级锁的两种实现，其区别在于：
 
-- 共享锁允许持有其的事务对行进行读操作。
-- 排他锁允许持有其的事务对行进行写操作（更新或删除）。
+- 共享锁（*shared lock, S*）允许持有其的事务对行进行读操作。
+- 排他锁（*exclusive lock, X*）允许持有其的事务对行进行写操作（更新或删除）。
 
-举个例子，如果事务`t1`持有了行`r`的共享锁，那么此时另一个事务`t2`对于行`r`的锁请求操作会被如下处置：
+举个例子，如果事务`T1`持有了行`r`的共享锁，那么此时另一个事务`T2`对于行`r`的锁请求操作会被如下处置：
 
-- `t2`对行`r`的共享锁请求会被立刻准予，`t1`与`t2`同时持有行`r`的共享锁。
-- `t2`对行`r`的排他锁请求**不会**被准予（等待）。
+- `T2`对行`r`的共享锁请求会被立刻准予，`t1`与`t2`同时持有行`r`的共享锁。
+- `T2`对行`r`的排他锁请求**不会**被准予（进入等待）。
 
-同样的，若`t1`持有的是行`r`的排他锁，那么无论是`t2`的共享锁请求，还是排他锁请求，都不会被准予，`t2`的锁请求操作都需要等待`t1`释放行`r`的排他锁。
+同样的，若`T1`持有的是行`r`的排他锁，那么无论是`T2`的共享锁请求，还是排他锁请求，都不会被准予，`T2`的锁请求操作都需要等待`T1`释放行`r`的排他锁。
 
 ### 2.2 意向锁
+
+意向锁的存在支持了InnoDB在跨粒度锁的共存。
+
+跨粒度，InnoDB同时支持了表锁（`LOCK TABLES t1 READ|WRITE`）和行锁（共享锁与排他锁）。如果不存在意向锁的话，可能存在这种情况：
+
+事务`T1`持有了表`t`中行`r`的共享锁，事务`T2`尝试给表t加表级写锁，对于`T2`来说，在加表锁前需要做的是：
+
+1. 判断表`t`是否存在表锁。
+2. 遍历表`t`的所有行，看看是否存在加了行锁的行。
+
+步骤1没毛病，但是步骤2是不是有点效率低下？
+
+现在看看意向锁的定义：意向锁是表级锁，表示了事务**将要**对该表加上哪种类型（S或X）的行锁。
+
+有两种类型的意向锁：
+
+- 意向共享锁（*IS*），表示了事务将要对表中某行加上共享（S）锁。
+- 意向排他锁（*IX*），表示了事务将要对表中某行加上排他（X）锁。
+
+也就是说：
+
+- 事务在给表中某行加上共享锁**之前**，**必然**会先给表加一个IS锁。
+- 事务在给表中某行加上排他锁**之前**，**必然**会先给表加一个IX锁。
+
+那么回到上面的情况，对于T2来说，加表锁之前的步骤变为：
+
+1. 判断表`t`是否存在表锁。
+2. 判断表`t`是否存在意向锁。
+
+这就没什么毛病了。意向锁就是表锁和行锁之间的中介、润滑剂，是行锁在表级的一个体现。
+
+表级锁的冲突情况（我琢磨官网的意思，这里的S与X应该想指的是表级的读写锁）：
+
+|      |  X   |  IX  |  S   |  IS  |
+| :--: | :--: | :--: | :--: | :--: |
+|  X   | 冲突 | 冲突 | 冲突 | 冲突 |
+|  IX  | 冲突 | 共存 | 冲突 | 共存 |
+|  S   | 冲突 | 冲突 | 共存 | 共存 |
+|  IS  | 冲突 | 共存 | 共存 | 共存 |
 
 ### 2.3 记录锁（行锁）
 
