--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -133,7 +133,7 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 
 这就没什么毛病了。意向锁就是表锁和行锁之间的中介、润滑剂，是行锁在表级的一个体现。
 
-表级锁的冲突情况（我琢磨官网的意思，这里的S与X应该想指的是表级的读写锁）：
+表级锁的冲突情况（我琢磨官方手册的意思，这里的S与X应该想指的是表级的读写锁）：
 
 |      |  X   |  IX  |  S   |  IS  |
 | :--: | :--: | :--: | :--: | :--: |
@@ -142,9 +142,17 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 |  S   | 冲突 | 冲突 | 共存 | 共存 |
 |  IS  | 冲突 | 共存 | 共存 | 共存 |
 
-### 2.3 记录锁（行锁）
+### 2.3 记录锁
+
+记录锁（Record Lock）就是加在索引记录上的行锁。
+
+比如`SELECT c1 FROM t WHERE c1 = 10 FOR UPDATE;`会阻塞其他事务对表`t`中`c1 = 10`的所有记录的增删改操作。
+
+记录锁只会加在聚簇索引上。
 
 ### 2.4 间隙锁
+
+
 
 ### 2.5 临键锁
 
