--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -152,6 +152,56 @@ WHERE NAME = 'wait/lock/metadata/sql/mdl';
 
 ### 2.4 间隙锁
 
+间隙锁锁的是两条索引记录中间的区间，或是第一条索引记录之前（命中的范围第一条记录到上一条记录之间），或是最后一条索引记录之后（命中的范围最后一条记录到下一条记录之间）。
+
+间隙锁只有在隔离级别RR下有效，搞个例子：
+
+```sql
+CREATE TABLE tb_gap_lock (
+    col int(4)
+) engine=innodb;
+
+CREATE INDEX idx_col ON tb_gap_lock(col);
+
+INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
+```
+
+示例一 - 范围内：
+
+| Seq  | Session1                                                     | Session2                                                 |
+| ---- | ------------------------------------------------------------ | -------------------------------------------------------- |
+| 1    | set session transaction isolation level REPEATABLE READ;     | set session transaction isolation level REPEATABLE READ; |
+| 2    | start transaction;                                           |                                                          |
+| 3    | select * from tb_gap_lock where col between ‘5’ and ‘7’ lock in share mode; |                                                          |
+| 4    | (结果返回5,7)                                                |                                                          |
+| 5    |                                                              | insert into tb_gap_lock  values(4);                      |
+| 6    |                                                              | **（阻塞）**                                             |
+| 7    | commit;                                                      | （锁释放，返回OK）                                       |
+
+示例二 - 范围外1：
+
+| Seq  | Session1                                                     | Session2                                                 |
+| ---- | ------------------------------------------------------------ | -------------------------------------------------------- |
+| 1    | set session transaction isolation level REPEATABLE READ;     | set session transaction isolation level REPEATABLE READ; |
+| 2    | start transaction;                                           |                                                          |
+| 3    | select * from tb_gap_lock where col between ‘5’ and ‘7’ lock in share mode; |                                                          |
+| 4    | (结果返回5,7)                                                |                                                          |
+| 5    |                                                              | insert into tb_gap_lock  values(6);--或8                 |
+| 6    |                                                              | **（阻塞）**                                             |
+| 7    | commit;                                                      | （锁释放，返回OK）                                       |
+
+示例三 - 范围外2：
+
+| Seq  | Session1                                                     | Session2                                                 |
+| ---- | ------------------------------------------------------------ | -------------------------------------------------------- |
+| 1    | set session transaction isolation level REPEATABLE READ;     | set session transaction isolation level REPEATABLE READ; |
+| 2    | start transaction;                                           |                                                          |
+| 3    | select * from tb_gap_lock where col between ‘5’ and ‘7’ lock in share mode; |                                                          |
+| 4    | (结果返回5,7)                                                |                                                          |
+| 5    |                                                              | insert into tb_gap_lock  values(2);                      |
+| 6    |                                                              | **（未阻塞，返回OK）**                                   |
+| 7    | commit;                                                      |                                                          |
+
 
 
 ### 2.5 临键锁
