--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -202,7 +202,9 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 | 6    |                                                              | **（未阻塞，返回OK）**                                   |
 | 7    | commit;                                                      |                                                          |
 
+![image-20211203193436381](assets/image-20211203193436381.png)
 
+需要注意的是该场景中，col字段加索引是必要的。如果没有给col加索引，由于例子中也没有指定主键或唯一字段，那么InnoDB会生成默认的聚簇索引，那么对于col字段的'5-7'的间隙锁是没有预期效果的，因为默认的聚簇索引是按隐式字段rowId排序，新插入的行会依次插入在最后，而不会按照col的顺序。
 
 ### 2.5 临键锁
 
