--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -208,6 +208,8 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 
 ### 2.5 临键锁
 
+临键锁（Next-Key Lock）是记录锁与间隙锁的结合。（记录锁这条记录与其之前的间隙）
+
 ### 2.6 插入意向锁
 
 ### 2.7 自增锁
