--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -208,7 +208,11 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 
 ### 2.5 临键锁
 
-临键锁（Next-Key Lock）是记录锁与间隙锁的结合。（记录锁这条记录与其之前的间隙）
+临键锁（Next-Key Lock）是记录锁与间隙锁的结合。
+
+临键锁也可以认为是一种行锁，InnoDB用它在检索索引时来给索引记录加锁。临键锁影响的范围是特定索引记录的记录锁加上该记录之前的间隙。
+
+![image-20211203195301475](assets/image-20211203195301475.png)
 
 ### 2.6 插入意向锁
 
