插入意向锁

--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -216,6 +216,18 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 
 ### 2.6 插入意向锁
 
+插入意向锁是一种特殊的间隙锁，由`INSERT`操作（在行被新增前）加锁。这种锁的存在使得多个事务在同时往相同间隙中新增行时，不相互阻塞。
+
+有啥意义呢？
+
+参考上面间隙锁段落，新增行操作也会加间隙锁，比如假设上面的示例表中有`1,3,5,9`四条记录，一个事务往其中新增记录`6`，那么此时会存在间隙锁(5,6)(6,9)：
+
+![image-20211209202325545](assets/image-20211209202325545.png)
+
+如果按照意向锁的逻辑，另一个事务同时往表中新增一条记录`7`的话，由于间隙锁的“排他”，新增操作会被阻塞住。按常理来讲，如果新增的记录之间没啥约束冲突比如唯一约束之类的话，新增操作之间理应是互不影响的。所以这里如果发生阻塞，是不合理的。
+
+那么这就是插入意向锁的意义，插入意向锁标志了新增操作，它在排他锁之前发生，“告诉”其他`INSERT`操作，都是兄弟操作，别在这WAIT了。
+
 ### 2.7 自增锁
 
 ### 2.8 预测锁（空间索引Spatial Indexes）
