--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -172,7 +172,7 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 | ---- | ------------------------------------------------------------ | -------------------------------------------------------- |
 | 1    | set session transaction isolation level REPEATABLE READ;     | set session transaction isolation level REPEATABLE READ; |
 | 2    | start transaction;                                           |                                                          |
-| 3    | select * from tb_gap_lock where col between ‘5’ and ‘7’ lock in share mode; |                                                          |
+| 3    | select * from tb_gap_lock where col between 5 and 7 lock in share mode; |                                                          |
 | 4    | (结果返回5,7)                                                |                                                          |
 | 5    |                                                              | insert into tb_gap_lock  values(4);                      |
 | 6    |                                                              | **（阻塞）**                                             |
@@ -184,7 +184,7 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 | ---- | ------------------------------------------------------------ | -------------------------------------------------------- |
 | 1    | set session transaction isolation level REPEATABLE READ;     | set session transaction isolation level REPEATABLE READ; |
 | 2    | start transaction;                                           |                                                          |
-| 3    | select * from tb_gap_lock where col between ‘5’ and ‘7’ lock in share mode; |                                                          |
+| 3    | select * from tb_gap_lock where col between 5 and 7 lock in share mode; |                                                          |
 | 4    | (结果返回5,7)                                                |                                                          |
 | 5    |                                                              | insert into tb_gap_lock  values(6);--或8                 |
 | 6    |                                                              | **（阻塞）**                                             |
@@ -196,7 +196,7 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 | ---- | ------------------------------------------------------------ | -------------------------------------------------------- |
 | 1    | set session transaction isolation level REPEATABLE READ;     | set session transaction isolation level REPEATABLE READ; |
 | 2    | start transaction;                                           |                                                          |
-| 3    | select * from tb_gap_lock where col between ‘5’ and ‘7’ lock in share mode; |                                                          |
+| 3    | select * from tb_gap_lock where col between 5 and 7 lock in share mode; |                                                          |
 | 4    | (结果返回5,7)                                                |                                                          |
 | 5    |                                                              | insert into tb_gap_lock  values(2);                      |
 | 6    |                                                              | **（未阻塞，返回OK）**                                   |
