--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -230,5 +230,7 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 
 ### 2.7 自增锁
 
-### 2.8 预测锁（空间索引Spatial Indexes）
+自增锁是一种特殊的表级锁，一般由事务在新增操作中存在自增列（`AUTO_INCREMENT`）时获取。简单来说，一个表中存在自增主键，一个事务在往表中新增记录，另一个事务必须等待前一个事务新增操作完成后才能继续操作新增，以免自增序列发生错乱。
+
+InnoDB对于自增（`AUTO_INCREMENT`）有比较复杂的处理，参见[《14.6.1.6 AUTO_INCREMENT Handling in InnoDB》](https://dev.mysql.com/doc/refman/5.7/en/innodb-auto-increment-handling.html)。
 
