--- a/3.MySQL/6.mysql-lock.md
+++ b/3.MySQL/6.mysql-lock.md
@@ -234,3 +234,9 @@ INSERT INTO tb_gap_lock VALUES (1,3,5,7,9);
 
 InnoDB对于自增（`AUTO_INCREMENT`）有比较复杂的处理，参见[《14.6.1.6 AUTO_INCREMENT Handling in InnoDB》](https://dev.mysql.com/doc/refman/5.7/en/innodb-auto-increment-handling.html)。
 
+### 2.8 断言锁（Predicate Lock）（空间索引Spatial Indexes）
+
+这块比较特殊，MySQL支持存储空间类型（[Spatial Data Types](https://dev.mysql.com/doc/refman/5.7/en/spatial-types.html)）的数据，其对应的就是空间索引（Spatial Indexes）。区别与其他类型的数据，空间里的多维数据没有绝对的“排序”概念，常规的索引在这里不适用。
+
+为了支持空间索引的隔离级别，InnoDB使用了断言锁。一个空间索引包含了最小外包矩形 Minimum bounding rectangle (MBR) 的值，因此InnoDB可以通过在查询涉及的MBR值上设置断言锁，来强制了索引的一致性读，其他事务无法插入或修改与查询条件匹配的行。
+
